Fix layout issue with login page and sidebar pages

--- a/front-end/src/assets/styles/_variables.scss
+++ b/front-end/src/assets/styles/_variables.scss
@@ -142,4 +142,6 @@
   --orange: #f77b42;
 
   color-scheme: light;
+
+  --scrollbar-width: 0px;
 }
